deployment/ingresses/bdrs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bdrs
  namespace: bdrs
spec:
  ingressClassName: nginx
  rules:
    - host: bdrs.learning.think-it.io
      http:
        paths:
          - path: /api/management
            pathType: Prefix
            backend:
              service:
                name: tractusx-bdrs-server
                port:
                  number: 8081
          - path: /api/directory
            pathType: Prefix
            backend:
              service:
                name: tractusx-bdrs-server
                port:
                  number: 8082
